# RedTeam-Dashboard

./: .gitignore  APPLICATION_GUIDE.md  CLAUDE.md  README.md  VULN_ANALYSIS_ARCHITECTURE.md  you-are-a-senior-shiny-hearth.md
backend/: .env.example  pyproject.toml
backend/app/: main.py  observability.py
backend/app/agents/: bounded_completion.py  risk_prioritizer.py
backend/app/api/: auth.py  dashboard.py  deps.py  operations.py  scans.py  sessions.py  settings.py  target_workspaces.py  targets.py  users.py  verified_targets.py  vuln_scans.py  vulns.py
backend/app/core/: config.py  db.py  features.py  keys.py  rate_limit.py  redis.py  security.py  tokens.py
backend/app/logging/: config.py  context.py  redaction.py
backend/app/models/: __init__.py  ai_usage.py  asset.py  auth.py  cve_intel.py  endpoint.py  endpoint_observation.py  finding.py  hvt_signal.py  investigation_task.py  operation.py  org.py  scan.py  service.py  system_setting.py  target_workspace.py  technology.py  tls_observation.py  user.py  vuln_evidence.py  vuln_run_match.py  vulnerability.py
backend/app/pipeline/: coordinator.py  profiles.py  stage.py
backend/app/schemas/: admin.py  auth.py  base.py  dashboard.py  findings.py  operation.py  scan.py  subdomain_view.py  target.py  target_workspace.py  vuln.py
backend/app/services/: assets.py  audit.py  cipher_strength.py  classify_service.py  correlator_engine.py  dashboard.py  endpoint_enrichment.py  endpoints.py  hvt_score.py  hvt_signals.py  investigation_tasks.py  invites.py  net_guard.py  operations.py  (+16 more)
backend/migrations/: env.py
(+203 files in other folders)
