[project]
name = "recon-backend"
version = "0.1.0"
description = "Red Team Recon Dashboard backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "bcrypt>=4.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "arq>=0.25",
    "redis>=5.0",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "maxminddb>=2.6",
    "minio>=7.2",
    "python-json-logger>=2.0",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"
